// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles duplicate insert via internal PostGraphile savepoint: duplicateInsert 1`] = `
{
  "data": {
    "createUser": null,
  },
  "errors": [
    {
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "duplicate key value violates unique constraint "users_username_key"",
      "path": [
        "createUser",
      ],
    },
  ],
}
`;

exports[`handles duplicate insert via internal PostGraphile savepoint: firstInsert 1`] = `
{
  "data": {
    "createUser": {
      "user": {
        "id": "[ID]",
        "username": "dupeuser",
      },
    },
  },
}
`;

exports[`handles duplicate insert via internal PostGraphile savepoint: queryAfterDuplicateInsert 1`] = `
{
  "data": {
    "users": {
      "nodes": [
        {
          "id": "[ID]",
          "username": "dupeuser",
        },
      ],
    },
  },
}
`;
